# cosyconverter

./: README.md  chext.py  cosyconverter.py  pyproject.toml
src/: data.py  utils.py
